src/parser.output
Terminals unused in grammar

   FUNCTION


语法

    0 $accept: program $end

    1 program: class_defs END

    2 class_defs: class_defs class_def
    3           | class_def

    4 class_def: CLASS IDENTIFIER '{' fields '}'
    5          | CLASS IDENTIFIER EXTENDS IDENTIFIER '{' fields '}'
    6          | error IDENTIFIER '{' fields '}'
    7          | CLASS error '{' fields '}'
    8          | CLASS IDENTIFIER error fields '}'
    9          | CLASS IDENTIFIER '{' fields error
   10          | error IDENTIFIER EXTENDS IDENTIFIER '{' fields '}'
   11          | CLASS error EXTENDS IDENTIFIER '{' fields '}'
   12          | CLASS IDENTIFIER error IDENTIFIER '{' fields '}'
   13          | CLASS IDENTIFIER EXTENDS error '{' fields '}'
   14          | CLASS IDENTIFIER EXTENDS IDENTIFIER error fields '}'
   15          | CLASS IDENTIFIER EXTENDS IDENTIFIER '{' fields error

   16 fields: fields field
   17       | field

   18 field: var_def
   19      | func_def

   20 var_def: var ';'
   21        | var error

   22 var: type IDENTIFIER
   23    | type error

   24 type: INT
   25     | BOOL
   26     | STRING
   27     | VOID
   28     | CLASS IDENTIFIER
   29     | type '[' ']'
   30     | error IDENTIFIER
   31     | CLASS error

   32 func_def: type IDENTIFIER '=' '(' formals ')' OP_ARROW stmt_block ';'
   33         | type error '=' '(' formals ')' OP_ARROW stmt_block ';'
   34         | type IDENTIFIER '=' '(' formals ')' error stmt_block ';'
   35         | type IDENTIFIER '=' '(' formals ')' OP_ARROW stmt_block error

   36 formals: vars
   37        | VOID
   38        | %empty

   39 vars: vars ',' var
   40     | var
   41     | vars error var
   42     | vars ',' error

   43 actuals: exprs
   44        | %empty

   45 exprs: exprs ',' expr
   46      | expr
   47      | exprs error expr
   48      | exprs ',' error

   49 stmt_block: '{' stmts '}'

   50 stmts: stmts stmt
   51      | %empty

   52 stmt: var_def
   53     | simple_stmt ';'
   54     | if_stmt
   55     | while_stmt
   56     | for_stmt
   57     | return_stmt ';'
   58     | print_stmt ';'
   59     | stmt_block
   60     | simple_stmt error
   61     | return_stmt error
   62     | print_stmt error

   63 simple_stmt: lvalue '=' expr
   64            | call

   65 if_stmt: IF '(' expr ')' stmt
   66        | IF '(' expr ')' stmt ELSE stmt
   67        | IF error expr ')' stmt
   68        | IF '(' expr error stmt

   69 while_stmt: WHILE '(' expr ')' stmt
   70           | WHILE error expr ')' stmt
   71           | WHILE '(' expr error stmt

   72 for_stmt: FOR '(' simple_stmt ';' expr ';' simple_stmt ')' stmt
   73         | FOR error simple_stmt ';' expr ';' simple_stmt ')' stmt
   74         | FOR '(' error ';' expr ';' simple_stmt ')' stmt
   75         | FOR '(' simple_stmt error expr ';' simple_stmt ')' stmt
   76         | FOR '(' simple_stmt ';' expr error simple_stmt ')' stmt
   77         | FOR '(' simple_stmt ';' expr ';' simple_stmt error stmt

   78 return_stmt: RETURN
   79            | RETURN expr

   80 print_stmt: PRINT '(' exprs ')'
   81           | PRINT error exprs ')' ';'
   82           | PRINT '(' exprs error ';'

   83 lvalue: receiver IDENTIFIER
   84       | expr '[' expr ']'

   85 call: receiver IDENTIFIER '(' actuals ')'

   86 receiver: expr '.'
   87         | %empty

   88 expr: lvalue
   89     | call
   90     | constant
   91     | expr '+' expr
   92     | expr '-' expr
   93     | expr '*' expr
   94     | expr '/' expr
   95     | expr '%' expr
   96     | expr OP_EQ expr
   97     | expr OP_NE expr
   98     | expr '<' expr
   99     | expr '>' expr
  100     | expr OP_LE expr
  101     | expr OP_GE expr
  102     | expr OP_AND expr
  103     | expr OP_OR expr
  104     | '(' expr ')'
  105     | '-' expr
  106     | '!' expr
  107     | READINTEGER '(' ')'
  108     | READLINE '(' ')'
  109     | THIS
  110     | NEW IDENTIFIER '(' ')'
  111     | NEW type '[' expr ']'

  112 constant: CONSTANT_INT
  113         | CONSTANT_BOOL
  114         | CONSTANT_STRING
  115         | NIL


Terminals, with rules where they appear

$end (0) 0
'!' (33) 106
'%' (37) 95
'(' (40) 32 33 34 35 65 66 68 69 71 72 74 75 76 77 80 82 85 104 107
    108 110
')' (41) 32 33 34 35 65 66 67 69 70 72 73 74 75 76 80 81 85 104 107
    108 110
'*' (42) 93
'+' (43) 91
',' (44) 39 42 45 48
'-' (45) 92 105
'.' (46) 86
'/' (47) 94
';' (59) 20 32 33 34 53 57 58 72 73 74 75 76 77 81 82
'<' (60) 98
'=' (61) 32 33 34 35 63
'>' (62) 99
'[' (91) 29 84 111
']' (93) 29 84 111
'{' (123) 4 5 6 7 9 10 11 12 13 15 49
'}' (125) 4 5 6 7 8 10 11 12 13 14 49
error (256) 6 7 8 9 10 11 12 13 14 15 21 23 30 31 33 34 35 41 42 47
    48 60 61 62 67 68 70 71 73 74 75 76 77 81 82
END (258) 1
NIL (259) 115
BOOL (260) 25
INT (261) 24
STRING (262) 26
FUNCTION (263)
VOID (264) 27 37
OP_AND (265) 102
OP_OR (266) 103
OP_LE (267) 100
OP_GE (268) 101
OP_EQ (269) 96
OP_NE (270) 97
OP_ARROW (271) 32 33 35
CLASS (272) 4 5 7 8 9 11 12 13 14 15 28 31
EXTENDS (273) 5 10 11 13 14 15
NEW (274) 110 111
THIS (275) 109
IF (276) 65 66 67 68
ELSE (277) 66
FOR (278) 72 73 74 75 76 77
WHILE (279) 69 70 71
RETURN (280) 78 79
PRINT (281) 80 81 82
READINTEGER (282) 107
READLINE (283) 108
CONSTANT_BOOL (284) 113
CONSTANT_INT (285) 112
CONSTANT_STRING (286) 114
IDENTIFIER (287) 4 5 6 8 9 10 11 12 13 14 15 22 28 30 32 34 35 83 85
    110
UNEG (288)
NOELSE (289)


Nonterminals, with rules where they appear

$accept (53)
    左： 0
program (54)
    左： 1, 右： 0
class_defs (55)
    左： 2 3, 右： 1 2
class_def (56)
    左： 4 5 6 7 8 9 10 11 12 13 14 15, 右： 2 3
fields (57)
    左： 16 17, 右： 4 5 6 7 8 9 10 11 12 13 14 15 16
field (58)
    左： 18 19, 右： 16 17
var_def (59)
    左： 20 21, 右： 18 52
var (60)
    左： 22 23, 右： 20 21 39 40 41
type (61)
    左： 24 25 26 27 28 29 30 31, 右： 22 23 29 32 33 34 35 111
func_def (62)
    左： 32 33 34 35, 右： 19
formals (63)
    左： 36 37 38, 右： 32 33 34 35
vars (64)
    左： 39 40 41 42, 右： 36 39 41 42
actuals (65)
    左： 43 44, 右： 85
exprs (66)
    左： 45 46 47 48, 右： 43 45 47 48 80 81 82
stmt_block (67)
    左： 49, 右： 32 33 34 35 59
stmts (68)
    左： 50 51, 右： 49 50
stmt (69)
    左： 52 53 54 55 56 57 58 59 60 61 62, 右： 50 65 66 67 68
    69 70 71 72 73 74 75 76 77
simple_stmt (70)
    左： 63 64, 右： 53 60 72 73 74 75 76 77
if_stmt (71)
    左： 65 66 67 68, 右： 54
while_stmt (72)
    左： 69 70 71, 右： 55
for_stmt (73)
    左： 72 73 74 75 76 77, 右： 56
return_stmt (74)
    左： 78 79, 右： 57 61
print_stmt (75)
    左： 80 81 82, 右： 58 62
lvalue (76)
    左： 83 84, 右： 63 88
call (77)
    左： 85, 右： 64 89
receiver (78)
    左： 86 87, 右： 83 85
expr (79)
    左： 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104
    105 106 107 108 109 110 111, 右： 45 46 47 63 65 66 67 68 69
    70 71 72 73 74 75 76 77 79 84 86 91 92 93 94 95 96 97 98 99 100
    101 102 103 104 105 106 111
constant (80)
    左： 112 113 114 115, 右： 90


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     转到状态 3
    class_defs  转到状态 4
    class_def   转到状态 5


State 1

    6 class_def: error . IDENTIFIER '{' fields '}'
   10          | error . IDENTIFIER EXTENDS IDENTIFIER '{' fields '}'

    IDENTIFIER  shift, and go to state 6


State 2

    4 class_def: CLASS . IDENTIFIER '{' fields '}'
    5          | CLASS . IDENTIFIER EXTENDS IDENTIFIER '{' fields '}'
    7          | CLASS . error '{' fields '}'
    8          | CLASS . IDENTIFIER error fields '}'
    9          | CLASS . IDENTIFIER '{' fields error
   11          | CLASS . error EXTENDS IDENTIFIER '{' fields '}'
   12          | CLASS . IDENTIFIER error IDENTIFIER '{' fields '}'
   13          | CLASS . IDENTIFIER EXTENDS error '{' fields '}'
   14          | CLASS . IDENTIFIER EXTENDS IDENTIFIER error fields '}'
   15          | CLASS . IDENTIFIER EXTENDS IDENTIFIER '{' fields error

    error       shift, and go to state 7
    IDENTIFIER  shift, and go to state 8


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: class_defs . END
    2 class_defs: class_defs . class_def

    error  shift, and go to state 1
    END    shift, and go to state 10
    CLASS  shift, and go to state 2

    class_def  转到状态 11


State 5

    3 class_defs: class_def .

    $default  reduce using rule 3 (class_defs)


State 6

    6 class_def: error IDENTIFIER . '{' fields '}'
   10          | error IDENTIFIER . EXTENDS IDENTIFIER '{' fields '}'

    EXTENDS  shift, and go to state 12
    '{'      shift, and go to state 13


State 7

    7 class_def: CLASS error . '{' fields '}'
   11          | CLASS error . EXTENDS IDENTIFIER '{' fields '}'

    EXTENDS  shift, and go to state 14
    '{'      shift, and go to state 15


State 8

    4 class_def: CLASS IDENTIFIER . '{' fields '}'
    5          | CLASS IDENTIFIER . EXTENDS IDENTIFIER '{' fields '}'
    8          | CLASS IDENTIFIER . error fields '}'
    9          | CLASS IDENTIFIER . '{' fields error
   12          | CLASS IDENTIFIER . error IDENTIFIER '{' fields '}'
   13          | CLASS IDENTIFIER . EXTENDS error '{' fields '}'
   14          | CLASS IDENTIFIER . EXTENDS IDENTIFIER error fields '}'
   15          | CLASS IDENTIFIER . EXTENDS IDENTIFIER '{' fields error

    error    shift, and go to state 16
    EXTENDS  shift, and go to state 17
    '{'      shift, and go to state 18


State 9

    0 $accept: program $end .

    $default  接受


State 10

    1 program: class_defs END .

    $default  reduce using rule 1 (program)


State 11

    2 class_defs: class_defs class_def .

    $default  reduce using rule 2 (class_defs)


State 12

   10 class_def: error IDENTIFIER EXTENDS . IDENTIFIER '{' fields '}'

    IDENTIFIER  shift, and go to state 19


State 13

    6 class_def: error IDENTIFIER '{' . fields '}'

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25

    fields    转到状态 26
    field     转到状态 27
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 14

   11 class_def: CLASS error EXTENDS . IDENTIFIER '{' fields '}'

    IDENTIFIER  shift, and go to state 32


State 15

    7 class_def: CLASS error '{' . fields '}'

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25

    fields    转到状态 33
    field     转到状态 27
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 16

    8 class_def: CLASS IDENTIFIER error . fields '}'
   12          | CLASS IDENTIFIER error . IDENTIFIER '{' fields '}'

    error       shift, and go to state 20
    BOOL        shift, and go to state 21
    INT         shift, and go to state 22
    STRING      shift, and go to state 23
    VOID        shift, and go to state 24
    CLASS       shift, and go to state 25
    IDENTIFIER  shift, and go to state 34

    fields    转到状态 35
    field     转到状态 27
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 17

    5 class_def: CLASS IDENTIFIER EXTENDS . IDENTIFIER '{' fields '}'
   13          | CLASS IDENTIFIER EXTENDS . error '{' fields '}'
   14          | CLASS IDENTIFIER EXTENDS . IDENTIFIER error fields '}'
   15          | CLASS IDENTIFIER EXTENDS . IDENTIFIER '{' fields error

    error       shift, and go to state 36
    IDENTIFIER  shift, and go to state 37


State 18

    4 class_def: CLASS IDENTIFIER '{' . fields '}'
    9          | CLASS IDENTIFIER '{' . fields error

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25

    fields    转到状态 38
    field     转到状态 27
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 19

   10 class_def: error IDENTIFIER EXTENDS IDENTIFIER . '{' fields '}'

    '{'  shift, and go to state 39


State 20

   30 type: error . IDENTIFIER

    IDENTIFIER  shift, and go to state 40


State 21

   25 type: BOOL .

    $default  reduce using rule 25 (type)


State 22

   24 type: INT .

    $default  reduce using rule 24 (type)


State 23

   26 type: STRING .

    $default  reduce using rule 26 (type)


State 24

   27 type: VOID .

    $default  reduce using rule 27 (type)


State 25

   28 type: CLASS . IDENTIFIER
   31     | CLASS . error

    error       shift, and go to state 41
    IDENTIFIER  shift, and go to state 42


State 26

    6 class_def: error IDENTIFIER '{' fields . '}'
   16 fields: fields . field

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25
    '}'     shift, and go to state 43

    field     转到状态 44
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 27

   17 fields: field .

    $default  reduce using rule 17 (fields)


State 28

   18 field: var_def .

    $default  reduce using rule 18 (field)


State 29

   20 var_def: var . ';'
   21        | var . error

    error  shift, and go to state 45
    ';'    shift, and go to state 46


State 30

   22 var: type . IDENTIFIER
   23    | type . error
   29 type: type . '[' ']'
   32 func_def: type . IDENTIFIER '=' '(' formals ')' OP_ARROW stmt_block ';'
   33         | type . error '=' '(' formals ')' OP_ARROW stmt_block ';'
   34         | type . IDENTIFIER '=' '(' formals ')' error stmt_block ';'
   35         | type . IDENTIFIER '=' '(' formals ')' OP_ARROW stmt_block error

    error       shift, and go to state 47
    IDENTIFIER  shift, and go to state 48
    '['         shift, and go to state 49


State 31

   19 field: func_def .

    $default  reduce using rule 19 (field)


State 32

   11 class_def: CLASS error EXTENDS IDENTIFIER . '{' fields '}'

    '{'  shift, and go to state 50


State 33

    7 class_def: CLASS error '{' fields . '}'
   16 fields: fields . field

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25
    '}'     shift, and go to state 51

    field     转到状态 44
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 34

   12 class_def: CLASS IDENTIFIER error IDENTIFIER . '{' fields '}'

    '{'  shift, and go to state 52


State 35

    8 class_def: CLASS IDENTIFIER error fields . '}'
   16 fields: fields . field

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25
    '}'     shift, and go to state 53

    field     转到状态 44
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 36

   13 class_def: CLASS IDENTIFIER EXTENDS error . '{' fields '}'

    '{'  shift, and go to state 54


State 37

    5 class_def: CLASS IDENTIFIER EXTENDS IDENTIFIER . '{' fields '}'
   14          | CLASS IDENTIFIER EXTENDS IDENTIFIER . error fields '}'
   15          | CLASS IDENTIFIER EXTENDS IDENTIFIER . '{' fields error

    error  shift, and go to state 55
    '{'    shift, and go to state 56


State 38

    4 class_def: CLASS IDENTIFIER '{' fields . '}'
    9          | CLASS IDENTIFIER '{' fields . error
   16 fields: fields . field

    error   shift, and go to state 57
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25
    '}'     shift, and go to state 58

    field     转到状态 44
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 39

   10 class_def: error IDENTIFIER EXTENDS IDENTIFIER '{' . fields '}'

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25

    fields    转到状态 59
    field     转到状态 27
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 40

   30 type: error IDENTIFIER .

    $default  reduce using rule 30 (type)


State 41

   31 type: CLASS error .

    $default  reduce using rule 31 (type)


State 42

   28 type: CLASS IDENTIFIER .

    $default  reduce using rule 28 (type)


State 43

    6 class_def: error IDENTIFIER '{' fields '}' .

    $default  reduce using rule 6 (class_def)


State 44

   16 fields: fields field .

    $default  reduce using rule 16 (fields)


State 45

   21 var_def: var error .

    $default  reduce using rule 21 (var_def)


State 46

   20 var_def: var ';' .

    $default  reduce using rule 20 (var_def)


State 47

   23 var: type error .
   33 func_def: type error . '=' '(' formals ')' OP_ARROW stmt_block ';'

    '='  shift, and go to state 60

    $default  reduce using rule 23 (var)


State 48

   22 var: type IDENTIFIER .
   32 func_def: type IDENTIFIER . '=' '(' formals ')' OP_ARROW stmt_block ';'
   34         | type IDENTIFIER . '=' '(' formals ')' error stmt_block ';'
   35         | type IDENTIFIER . '=' '(' formals ')' OP_ARROW stmt_block error

    '='  shift, and go to state 61

    $default  reduce using rule 22 (var)


State 49

   29 type: type '[' . ']'

    ']'  shift, and go to state 62


State 50

   11 class_def: CLASS error EXTENDS IDENTIFIER '{' . fields '}'

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25

    fields    转到状态 63
    field     转到状态 27
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 51

    7 class_def: CLASS error '{' fields '}' .

    $default  reduce using rule 7 (class_def)


State 52

   12 class_def: CLASS IDENTIFIER error IDENTIFIER '{' . fields '}'

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25

    fields    转到状态 64
    field     转到状态 27
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 53

    8 class_def: CLASS IDENTIFIER error fields '}' .

    $default  reduce using rule 8 (class_def)


State 54

   13 class_def: CLASS IDENTIFIER EXTENDS error '{' . fields '}'

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25

    fields    转到状态 65
    field     转到状态 27
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 55

   14 class_def: CLASS IDENTIFIER EXTENDS IDENTIFIER error . fields '}'

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25

    fields    转到状态 66
    field     转到状态 27
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 56

    5 class_def: CLASS IDENTIFIER EXTENDS IDENTIFIER '{' . fields '}'
   15          | CLASS IDENTIFIER EXTENDS IDENTIFIER '{' . fields error

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25

    fields    转到状态 67
    field     转到状态 27
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 57

    9 class_def: CLASS IDENTIFIER '{' fields error .
   30 type: error . IDENTIFIER

    IDENTIFIER  shift, and go to state 40

    $default  reduce using rule 9 (class_def)


State 58

    4 class_def: CLASS IDENTIFIER '{' fields '}' .

    $default  reduce using rule 4 (class_def)


State 59

   10 class_def: error IDENTIFIER EXTENDS IDENTIFIER '{' fields . '}'
   16 fields: fields . field

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25
    '}'     shift, and go to state 68

    field     转到状态 44
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 60

   33 func_def: type error '=' . '(' formals ')' OP_ARROW stmt_block ';'

    '('  shift, and go to state 69


State 61

   32 func_def: type IDENTIFIER '=' . '(' formals ')' OP_ARROW stmt_block ';'
   34         | type IDENTIFIER '=' . '(' formals ')' error stmt_block ';'
   35         | type IDENTIFIER '=' . '(' formals ')' OP_ARROW stmt_block error

    '('  shift, and go to state 70


State 62

   29 type: type '[' ']' .

    $default  reduce using rule 29 (type)


State 63

   11 class_def: CLASS error EXTENDS IDENTIFIER '{' fields . '}'
   16 fields: fields . field

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25
    '}'     shift, and go to state 71

    field     转到状态 44
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 64

   12 class_def: CLASS IDENTIFIER error IDENTIFIER '{' fields . '}'
   16 fields: fields . field

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25
    '}'     shift, and go to state 72

    field     转到状态 44
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 65

   13 class_def: CLASS IDENTIFIER EXTENDS error '{' fields . '}'
   16 fields: fields . field

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25
    '}'     shift, and go to state 73

    field     转到状态 44
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 66

   14 class_def: CLASS IDENTIFIER EXTENDS IDENTIFIER error fields . '}'
   16 fields: fields . field

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25
    '}'     shift, and go to state 74

    field     转到状态 44
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 67

    5 class_def: CLASS IDENTIFIER EXTENDS IDENTIFIER '{' fields . '}'
   15          | CLASS IDENTIFIER EXTENDS IDENTIFIER '{' fields . error
   16 fields: fields . field

    error   shift, and go to state 75
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25
    '}'     shift, and go to state 76

    field     转到状态 44
    var_def   转到状态 28
    var       转到状态 29
    type      转到状态 30
    func_def  转到状态 31


State 68

   10 class_def: error IDENTIFIER EXTENDS IDENTIFIER '{' fields '}' .

    $default  reduce using rule 10 (class_def)


State 69

   33 func_def: type error '=' '(' . formals ')' OP_ARROW stmt_block ';'

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 77
    CLASS   shift, and go to state 25

    ')'  reduce using rule 38 (formals)

    var      转到状态 78
    type     转到状态 79
    formals  转到状态 80
    vars     转到状态 81


State 70

   32 func_def: type IDENTIFIER '=' '(' . formals ')' OP_ARROW stmt_block ';'
   34         | type IDENTIFIER '=' '(' . formals ')' error stmt_block ';'
   35         | type IDENTIFIER '=' '(' . formals ')' OP_ARROW stmt_block error

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 77
    CLASS   shift, and go to state 25

    ')'  reduce using rule 38 (formals)

    var      转到状态 78
    type     转到状态 79
    formals  转到状态 82
    vars     转到状态 81


State 71

   11 class_def: CLASS error EXTENDS IDENTIFIER '{' fields '}' .

    $default  reduce using rule 11 (class_def)


State 72

   12 class_def: CLASS IDENTIFIER error IDENTIFIER '{' fields '}' .

    $default  reduce using rule 12 (class_def)


State 73

   13 class_def: CLASS IDENTIFIER EXTENDS error '{' fields '}' .

    $default  reduce using rule 13 (class_def)


State 74

   14 class_def: CLASS IDENTIFIER EXTENDS IDENTIFIER error fields '}' .

    $default  reduce using rule 14 (class_def)


State 75

   15 class_def: CLASS IDENTIFIER EXTENDS IDENTIFIER '{' fields error .
   30 type: error . IDENTIFIER

    IDENTIFIER  shift, and go to state 40

    $default  reduce using rule 15 (class_def)


State 76

    5 class_def: CLASS IDENTIFIER EXTENDS IDENTIFIER '{' fields '}' .

    $default  reduce using rule 5 (class_def)


State 77

   27 type: VOID .
   37 formals: VOID .

    ')'       reduce using rule 37 (formals)
    $default  reduce using rule 27 (type)


State 78

   40 vars: var .

    $default  reduce using rule 40 (vars)


State 79

   22 var: type . IDENTIFIER
   23    | type . error
   29 type: type . '[' ']'

    error       shift, and go to state 83
    IDENTIFIER  shift, and go to state 84
    '['         shift, and go to state 49


State 80

   33 func_def: type error '=' '(' formals . ')' OP_ARROW stmt_block ';'

    ')'  shift, and go to state 85


State 81

   36 formals: vars .
   39 vars: vars . ',' var
   41     | vars . error var
   42     | vars . ',' error

    error  shift, and go to state 86
    ','    shift, and go to state 87

    ')'  reduce using rule 36 (formals)


State 82

   32 func_def: type IDENTIFIER '=' '(' formals . ')' OP_ARROW stmt_block ';'
   34         | type IDENTIFIER '=' '(' formals . ')' error stmt_block ';'
   35         | type IDENTIFIER '=' '(' formals . ')' OP_ARROW stmt_block error

    ')'  shift, and go to state 88


State 83

   23 var: type error .

    $default  reduce using rule 23 (var)


State 84

   22 var: type IDENTIFIER .

    $default  reduce using rule 22 (var)


State 85

   33 func_def: type error '=' '(' formals ')' . OP_ARROW stmt_block ';'

    OP_ARROW  shift, and go to state 89


State 86

   41 vars: vars error . var

    error   shift, and go to state 20
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25

    var   转到状态 90
    type  转到状态 79


State 87

   39 vars: vars ',' . var
   42     | vars ',' . error

    error   shift, and go to state 91
    BOOL    shift, and go to state 21
    INT     shift, and go to state 22
    STRING  shift, and go to state 23
    VOID    shift, and go to state 24
    CLASS   shift, and go to state 25

    var   转到状态 92
    type  转到状态 79


State 88

   32 func_def: type IDENTIFIER '=' '(' formals ')' . OP_ARROW stmt_block ';'
   34         | type IDENTIFIER '=' '(' formals ')' . error stmt_block ';'
   35         | type IDENTIFIER '=' '(' formals ')' . OP_ARROW stmt_block error

    error     shift, and go to state 93
    OP_ARROW  shift, and go to state 94


State 89

   33 func_def: type error '=' '(' formals ')' OP_ARROW . stmt_block ';'

    '{'  shift, and go to state 95

    stmt_block  转到状态 96


State 90

   41 vars: vars error var .

    $default  reduce using rule 41 (vars)


State 91

   30 type: error . IDENTIFIER
   42 vars: vars ',' error .

    IDENTIFIER  shift, and go to state 40

    $default  reduce using rule 42 (vars)


State 92

   39 vars: vars ',' var .

    $default  reduce using rule 39 (vars)


State 93

   34 func_def: type IDENTIFIER '=' '(' formals ')' error . stmt_block ';'

    '{'  shift, and go to state 95

    stmt_block  转到状态 97


State 94

   32 func_def: type IDENTIFIER '=' '(' formals ')' OP_ARROW . stmt_block ';'
   35         | type IDENTIFIER '=' '(' formals ')' OP_ARROW . stmt_block error

    '{'  shift, and go to state 95

    stmt_block  转到状态 98


State 95

   49 stmt_block: '{' . stmts '}'

    $default  reduce using rule 51 (stmts)

    stmts  转到状态 99


State 96

   33 func_def: type error '=' '(' formals ')' OP_ARROW stmt_block . ';'

    ';'  shift, and go to state 100


State 97

   34 func_def: type IDENTIFIER '=' '(' formals ')' error stmt_block . ';'

    ';'  shift, and go to state 101


State 98

   32 func_def: type IDENTIFIER '=' '(' formals ')' OP_ARROW stmt_block . ';'
   35         | type IDENTIFIER '=' '(' formals ')' OP_ARROW stmt_block . error

    error  shift, and go to state 102
    ';'    shift, and go to state 103


State 99

   49 stmt_block: '{' stmts . '}'
   50 stmts: stmts . stmt

    error            shift, and go to state 20
    NIL              shift, and go to state 104
    BOOL             shift, and go to state 21
    INT              shift, and go to state 22
    STRING           shift, and go to state 23
    VOID             shift, and go to state 24
    CLASS            shift, and go to state 25
    NEW              shift, and go to state 105
    THIS             shift, and go to state 106
    IF               shift, and go to state 107
    FOR              shift, and go to state 108
    WHILE            shift, and go to state 109
    RETURN           shift, and go to state 110
    PRINT            shift, and go to state 111
    READINTEGER      shift, and go to state 112
    READLINE         shift, and go to state 113
    CONSTANT_BOOL    shift, and go to state 114
    CONSTANT_INT     shift, and go to state 115
    CONSTANT_STRING  shift, and go to state 116
    '-'              shift, and go to state 117
    '!'              shift, and go to state 118
    '{'              shift, and go to state 95
    '}'              shift, and go to state 119
    '('              shift, and go to state 120

    IDENTIFIER  reduce using rule 87 (receiver)
